Fix header spacings

--- a/common/css/tab.css
+++ b/common/css/tab.css
@@ -177,10 +177,6 @@ button {
   margin-bottom: 200px;
 }
 
-.tab-view h2 {
-  padding-top: 1rem;
-}
-
 .tab-view h4 {
   margin-bottom: 5px;
 }
@@ -346,6 +342,11 @@ h2,
 h3 {
   margin-top: -2rem;
   padding-top: 3rem;
+  margin-bottom: 0;
+}
+
+*:has(+ h2, + h3) {
+  margin-bottom: 1rem;
 }
 
 .infotext {
@@ -585,6 +586,7 @@ video {
 .abitti-version-selector {
   display: flex;
   gap: 2rem;
+  margin-bottom: 2rem;
 }
 
 .abitti-version-button {
